--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^18.0.6",
     "discord.js": "^14.7.1",
     "express": "^4.18.2",
-    "node-fetch": "^3.2.6"
+    "node-fetch": "^3.2.6",
+    "string-similarity": "^4.0.4",
+    "string-similarity-js": "^2.1.4"
   }
 }
